Fixes:  - Adding heading to the size of public and personal drive. There is enough space for it.  - Adjust height to 70px  - Toggle download button enable disable instead of visible true/false  - Fix so that you can actually download original. getFile(null) defaults to first slide and gives you a PNG. Not the original

--- a/openmeetings-web/src/main/webapp/css/raw-tree.css
+++ b/openmeetings-web/src/main/webapp/css/raw-tree.css
@@ -17,6 +17,12 @@
 }
 .file-tree .footer {
 	height: var(--tree-footer-height);
+	display: flex;
+    flex-direction: column;
+}
+.file-tree .footer .download {
+	padding-left: 5px;
+	padding-right: 5px;
 }
 .file-tree .footer .sizes {
 	display: inline-block;
